--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -186,3 +186,60 @@ footer nav ul {
 	margin: 2em
 }
 
+/** elements ajoutés via JS **/
+
+#filters {
+	display: flex;
+	gap: 2%;
+	justify-content: center;
+}
+
+.buttons {
+	font-family: "Syne";
+	margin-bottom: 2em;
+    font-weight: 700;
+    color: white;
+    background-color: #1d6154;
+    margin-left: 0;
+    width: 180px;
+    text-align: center;
+    border-radius: 60px;
+    height: 45px;
+    font-size: 1.2em;
+    border: none;
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+    cursor: pointer;
+}
+
+.active-filter {
+    color: blue;
+    font-weight: bold;
+}
+
+
+/** login page **/
+
+.forgotten-password {
+	text-align: center;
+	cursor: pointer;
+}
+
+#login-form {
+	width: 70%;
+
+}
+
+#login {
+	text-align: center;
+}
+
+#connect-button {
+	cursor: pointer;
+}
+
+#footer {
+	margin-top: 300px;
+}
+
+
+
