--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -198,26 +198,30 @@ footer nav ul {
 	font-family: "Syne";
 	margin-bottom: 2em;
     font-weight: 700;
-    color: white;
-    background-color: #1d6154;
+    color: #1d6154;
+    background-color: white;
     margin-left: 0;
     width: 180px;
     text-align: center;
     border-radius: 60px;
     height: 45px;
     font-size: 1.2em;
-    border: none;
+    border: #1d6154 1px solid ;
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
     cursor: pointer;
 }
 
 .active-filter {
-    color: blue;
-    font-weight: bold;
+    color: white;
+	background-color: #1d6154;;
+    border: none;
 }
 
 
 /** login page **/
+
+.nav {cursor: pointer;
+}
 
 .forgotten-password {
 	text-align: center;
