ajout login.src

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -186,7 +186,9 @@ footer nav ul {
 	margin: 2em
 }
 
-/** elements ajoutés via JS **/
+
+
+/** elements ajoutés dynamiquement via JS **/
 
 #filters {
 	display: flex;
