--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -348,8 +348,8 @@ footer nav ul {
     font-weight: 700;
     color: white;
     background-color: #1d6154;
-    margin-left: 0;
-    width: 280px;
+   
+    width: 40%;
     text-align: center;
     border-radius: 60px;
     height: 45px;
@@ -357,10 +357,16 @@ footer nav ul {
     border: #1d6154 1px solid ;
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
     cursor: pointer;
-	margin-left: 20%;
+	margin-left: 30%;
+	margin-right: 30%;
 	margin-top: 30px;
   }
 
+  /* Modal input */
+ .input-file {
+	background-color: #E8F1F6;
+	margin-top: 20px;
+ }
 
 /** login page **/
 
