--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -362,6 +362,14 @@ footer nav ul {
 	margin-top: 30px;
   }
 
+  /*Modal add content */
+
+  .modale-add-content {
+	display: flex;
+	flex-direction: column;
+	gap: 3%;
+  }
+
   /* Modal input */
  .input-file {
 	background-color: #E8F1F6;
