--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -370,6 +370,26 @@ footer nav ul {
 	gap: 3%;
   }
 
+  .modale-validate-button {
+	font-family: "Syne";
+	margin-bottom: 2em;
+    font-weight: 700;
+    color: white;
+    background-color: #1d6154;
+   
+    width: 40%;
+    text-align: center;
+    border-radius: 60px;
+    height: 45px;
+    font-size: 1.2em;
+    border: #1d6154 1px solid ;
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+    cursor: pointer;
+	margin-left: 30%;
+	margin-right: 30%;
+	margin-top: 30px;
+  }
+
   /* Modal input */
  .input-file {
 	background-color: #E8F1F6;
