--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -276,7 +276,8 @@ footer nav ul {
   .modale-title {
 	text-align: center;
 	font-size: 27px;
-	margin-top: 50px;
+	margin-top: 0px;
+	margin-bottom: 30px;
   }
 
   .modal-main-display, .modale-add-content {
@@ -286,7 +287,7 @@ footer nav ul {
 	margin-left: 10%;
 	margin-right: 10%;
 	justify-content: stretch;
-	margin-top: 40px;
+	margin-top: 0px;
   }
 
   .modal-image {
@@ -392,9 +393,15 @@ footer nav ul {
   }
 
   /* Modal input */
- .input-file {
+ #input-file {
 	background-color: #E8F1F6;
 	margin-top: 20px;
+	width: 100%;
+	
+ }
+ #file-upload-button {
+	
+	display: none;
  }
 
  .input-modale {
@@ -402,9 +409,14 @@ footer nav ul {
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-	margin-top: 20px;
+	margin-top: 10px;
  }
 
+ .input-title {
+	margin-top: 20px;
+	
+ }
+  
 
 
 
