--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -135,6 +135,8 @@ li:hover {
 
 .gallery img {
 	width: 100%;
+	height: 100%;
+	object-fit: cover;
 
 }
 #contact {
@@ -190,6 +192,7 @@ footer nav ul {
 
 
 /** elements ajoutés dynamiquement via JS **/
+
 
 #filters {
 	display: flex;
@@ -280,11 +283,21 @@ footer nav ul {
 	margin-bottom: 30px;
   }
 
-  .modal-main-display, .modale-add-content {
+  .modal-main-display {
 	display: flex;
     flex-wrap: wrap;
 	gap: 2%;
 	margin-left: 10%;
+	margin-right: 10%;
+	justify-content: stretch;
+	margin-top: 0px;
+  }
+
+  .modale-add-content {
+	display: flex;
+    flex-wrap: wrap;
+	gap: 2%;
+	margin-left: 20px;
 	margin-right: 10%;
 	justify-content: stretch;
 	margin-top: 0px;
@@ -316,6 +329,10 @@ footer nav ul {
 	cursor: pointer;
 	font-size: 16px; 
   }
+
+  .fa-arrow-left:before {
+    font-size: 18px;
+}
 
 
   
@@ -350,7 +367,7 @@ footer nav ul {
     font-weight: 700;
     color: white;
     background-color: #1d6154;
-   
+    box-sizing: border-box;
     width: 40%;
     text-align: center;
     border-radius: 60px;
@@ -378,7 +395,7 @@ footer nav ul {
     font-weight: 700;
     color: white;
     background-color: #1d6154;
-   
+    box-sizing: border-box;
     width: 40%;
     text-align: center;
     border-radius: 60px;
@@ -393,14 +410,8 @@ footer nav ul {
   }
 
   /* Modal input */
- #input-file {
-	background-color: #E8F1F6;
-	margin-top: 20px;
-	width: 100%;
-	
- }
+ 
  #file-upload-button {
-	
 	display: none;
  }
 
@@ -410,14 +421,65 @@ footer nav ul {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 	margin-top: 10px;
+    box-sizing: border-box;
  }
 
  .input-title {
 	margin-top: 20px;
+	font-size: 1.2em;
+	font-weight: 500;
+ }
+ 
+ .fa-regular {
+	font-size: 80px;
+	color: #B9C5CC;
+ }
+
+/* image upload and preview */
+ .image-upload {
+
+	width: 100%;
+	text-align: center;
+	background-color: #E8F1F6;
+	border-radius: 5px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 0px;
+	position: relative;
+	height: 200px;
+	overflow: hidden;
 	
  }
-  
 
+ .image-preview {
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: cover;
+	  
+ }
+
+  
+.button-upload {
+	font-family: "Syne";
+	margin-bottom: 2em;
+    font-weight: 700;
+    color: white;
+    background-color: #CBD6DC;
+    color: #306685;
+    width: 40%;
+    text-align: center;
+    border-radius: 60px;
+    height: 45px;
+    font-size: 1.2em;
+    border: none;
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+    cursor: pointer;
+	margin-left: 30%;
+	margin-right: 30%;
+	margin-top: 20px;
+}
 
 
 
