--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -360,6 +360,13 @@ footer nav ul {
 	width: 80%;
   }
 
+  .modal-border-2 {
+	border-top: #b3b3b3 1px solid ;
+	margin-top: 50px;
+	margin-left: 0%;
+	width: 100%;
+  }
+
   /* Modal Add button */
   .modal-add-button {
 	font-family: "Syne";
@@ -387,6 +394,8 @@ footer nav ul {
 	display: flex;
 	flex-direction: column;
 	gap: 3%;
+	margin-left: 15%;
+	margin-right: 15%;
   }
 
   .modale-validate-button {
@@ -408,6 +417,10 @@ footer nav ul {
 	margin-right: 30%;
 	margin-top: 30px;
   }
+
+ .p-file {
+	margin-top: -20px;
+ }
 
   /* Modal input */
  
@@ -468,7 +481,7 @@ footer nav ul {
     color: white;
     background-color: #CBD6DC;
     color: #306685;
-    width: 40%;
+    width: 50%;
     text-align: center;
     border-radius: 60px;
     height: 45px;
@@ -478,7 +491,7 @@ footer nav ul {
     cursor: pointer;
 	margin-left: 30%;
 	margin-right: 30%;
-	margin-top: 20px;
+	margin-top: 10px;
 }
 
 
