--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -282,6 +282,14 @@ footer nav ul {
 	margin-top: 0px;
 	margin-bottom: 30px;
   }
+  .modale-add-title {
+    text-align: center;
+	font-size: 27px;
+	margin-top: -20px;
+	margin-bottom: 30px;
+
+  }
+
 
   .modal-main-display {
 	display: flex;
@@ -402,9 +410,29 @@ footer nav ul {
 	font-family: "Syne";
 	margin-bottom: 2em;
     font-weight: 700;
+    color: #FFFFFF;
+    background-color: #A7A7A7;
+    
+    width: 40%;
+    text-align: center;
+    border-radius: 60px;
+    height: 45px;
+    font-size: 1.2em;
+    border: #A7A7A7 1px solid ;
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+    cursor: pointer;
+	margin-left: 30%;
+	margin-right: 30%;
+	margin-top: 30px;
+  }
+
+  .modale-validated-button {
+	font-family: "Syne";
+	margin-bottom: 2em;
+    font-weight: 700;
     color: white;
     background-color: #1d6154;
-    box-sizing: border-box;
+    
     width: 40%;
     text-align: center;
     border-radius: 60px;
@@ -417,6 +445,10 @@ footer nav ul {
 	margin-right: 30%;
 	margin-top: 30px;
   }
+   
+  
+
+
 
  .p-file {
 	margin-top: -20px;
@@ -435,6 +467,7 @@ footer nav ul {
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 	margin-top: 10px;
     box-sizing: border-box;
+	outline: none;  
  }
 
  .input-title {
@@ -458,7 +491,7 @@ footer nav ul {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-end;
 	padding: 0px;
 	position: relative;
 	height: 200px;
