--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -450,11 +450,12 @@ footer nav ul {
 
 
 
- .p-file {
-	margin-top: -20px;
- }
 
   /* Modal input */
+
+.p-file {
+	margin-bottom: 15px;
+}
  
  #file-upload-button {
 	display: none;
