--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -208,6 +208,7 @@ footer nav ul {
     background-color: white;
     margin-left: 0;
     width: 180px;
+	
     text-align: center;
     border-radius: 60px;
     height: 45px;
@@ -274,6 +275,7 @@ footer nav ul {
 	width: 40%; 
 	height: 70%;
 	border-radius: 2%;
+	height: fit-content;
   }
 
   .modale-title {
@@ -394,6 +396,7 @@ footer nav ul {
 	margin-left: 30%;
 	margin-right: 30%;
 	margin-top: 30px;
+	
   }
 
   /*Modal add content */
