--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -242,7 +242,7 @@ li:hover {
 #contact {
 	width: 50%;
 	margin: auto;
-	margin-left: 33%;
+
 }
 
 #contact>* {
@@ -488,6 +488,7 @@ footer nav ul {
 	width: 100%;
 }
 
+
 /* Modal Add button */
 .modal-add-button {
 	font-family: "Syne";
@@ -509,6 +510,7 @@ footer nav ul {
 	margin-top: 30px;
 
 }
+
 
 /*Modal add content */
 
@@ -604,13 +606,16 @@ footer nav ul {
 	justify-content: flex-end;
 	padding: 0px;
 	position: relative;
-	height: 200px;
+	height: 195px;
 	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	}
 
-}
+
 
 .image-preview {
-	max-width: 100%;
+	width: 40%;
 	max-height: 100%;
 	object-fit: cover;
 
@@ -618,9 +623,10 @@ footer nav ul {
 
 
 
+
 .button-upload {
 	font-family: "Syne";
-	margin-bottom: 2em;
+	margin-bottom: 15px;
 	font-weight: 700;
 	color: white;
 	background-color: #CBD6DC;
